--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint -- --fix && npm run test",
-      "pre-push": "npm run lint && npm run test"
+      "_pre-commit": "npm run lint -- --fix && npm run test",
+      "_pre-push": "npm run lint && npm run test"
     }
   }
 }
